docs: expand project documentation